<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="eus.ehu.tta.upv_ehutour.presentador.BibliotecaActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/titleBiblioteca"
        android:textStyle="bold"
        android:textSize="20dp"
        android:textColor="@color/black"
        android:gravity="center"/>
    <LinearLayout
        android:id="@+id/backgroundBiblioteca"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/textoBiblioteca1"
            android:layout_marginTop="10dp"
            android:textSize="18dp"
            android:textColor="@color/black"/>
        <TextView
            android:id="@+id/textoBiblio2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/textoBiblioteca2"
            android:textColor="@color/black"/>
        <TextView
            android:id="@+id/textoBiblio3"
            android:layout_width="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_height="wrap_content"
            android:text="@string/preguntaBiblioteca"
            android:visibility="gone"
            android:textColor="@color/black"/>

        <RadioGroup
            android:id="@+id/pruebaBiblioteca"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:visibility="gone"
            android:orientation="vertical">
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/respuesta1Biblioteca"
                android:background="@drawable/my_radio_button"/>

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/respuesta2Biblioteca"
                android:background="@drawable/my_radio_button"/>

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/respuesta3Biblioteca"
                android:background="@drawable/my_radio_button"/>

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/respuesta4Biblioteca"
                android:background="@drawable/my_radio_button"/>

        </RadioGroup>


        <Button
            android:id="@+id/botonCheckBilioteca"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_gravity="center"
            android:visibility="gone"
            android:onClick="checkPrueba"
            android:text="@string/botonCheck"/>

        <Button
            android:id="@+id/botonPruebaBiblioteca"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:text="@string/botonPrueba"
            android:onClick="prueba"/>

        <Button
            android:id="@+id/botonLlegarBiblioteca"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:text="@string/botonMaps"
            android:onClick="llegarAqui"/>



    </LinearLayout>

</LinearLayout>
