<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="eus.ehu.tta.upv_ehutour.presentador.CafeteriaActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/titleCafeteria"
        android:textStyle="bold"
        android:textSize="20dp"
        android:textColor="@color/black"
        android:gravity="center"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/foto_cafeteria">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textoCafeteria"
            android:layout_marginLeft="15dp"
            android:textColor="@color/black"
            android:layout_marginTop="15dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/preguntaCafeteria"
            android:layout_marginLeft="15dp"
            android:textColor="@color/black"
            android:layout_marginTop="15dp"/>

        <RadioGroup
            android:id="@+id/pruebaCafeteria"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical">
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/respuesta1Cafeteria"
                android:background="@drawable/my_radio_button"/>

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/respuesta2Cafeteria"
                android:background="@drawable/my_radio_button"/>

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/respuesta3Cafeteria"
                android:background="@drawable/my_radio_button"/>

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/respuesta4Cafeteria"
                android:background="@drawable/my_radio_button"/>

        </RadioGroup>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:text="@string/botonCheck"
            android:onClick="check"/>

        <Button
            android:id="@+id/botonAvanzarCafeteria"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:enabled="false"
            android:text="@string/botonAvanzar"
            android:onClick="avanzar"/>


    </LinearLayout>

</LinearLayout>
