<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="eus.ehu.tta.upv_ehutour.presentador.RegistroActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/titleRegistro"
        android:textStyle="bold"
        android:textSize="20dp"
        android:textColor="@color/black"
        android:gravity="center"/>
    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/textoRegistro1"
            android:textColor="@color/black" />
        <EditText
            android:id="@+id/usuarioRegistro"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginLeft="40dp"
            android:textColor="@color/black" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/textoRegistro2"
            android:textColor="@color/black" />
        <EditText
            android:id="@+id/passRegistro"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginLeft="40dp"
            android:textColor="@color/black"
            android:inputType="textPassword"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/textoRegistro3"
            android:textColor="@color/black" />
        <EditText
            android:id="@+id/nombreRegistro"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginLeft="40dp"
            android:textColor="@color/black" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/textoRegistro4"
            android:textColor="@color/black" />
        <EditText
            android:id="@+id/apellidoRegistro"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginLeft="40dp"
            android:textColor="@color/black" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/textoRegistro5"
            android:textColor="@color/black" />
        <EditText
            android:id="@+id/centroRegistro"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginLeft="40dp"
            android:textColor="@color/black" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/textoRegistro6"
            android:textColor="@color/black" />
        <EditText
            android:id="@+id/telefonoRegistro"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginLeft="40dp"
            android:textColor="@color/black" />

    </GridLayout>

    <Button
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:text="@string/botonRegistrase"
        android:onClick="registro"/>


</LinearLayout>
